<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>api</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>fmt-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>validate</phase>
          </execution>
        </executions>
        <groupId>com.spotify.fmt</groupId>
        <version>${fmt-maven-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
      </plugin>
      <plugin>
        <artifactId>flyway-maven-plugin</artifactId>
        <groupId>org.flywaydb</groupId>
        <version>${flyway-version}</version>
      </plugin>
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <goals>
              <goal>report</goal>
            </goals>
            <id>report</id>
            <phase>prepare-package</phase>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>${jacoco-maven-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <rules>
                <requireProperty>
                  <message>You must provide a valid username for the UAT Managed
                    Service using "-Dims-username=yourUsername".
                  </message>
                  <property>ims-username</property>
                </requireProperty>
                <requireProperty>
                  <message>You must provide a valid password for the UAT Managed
                    Service using "-Dims-password=yourPassword".
                  </message>
                  <property>ims-password</property>
                </requireProperty>
              </rules>
              <!--suppress UnresolvedMavenProperty -->
              <skip>${skipTests}</skip>
            </configuration>
            <goals>
              <goal>enforce</goal>
            </goals>
            <id>enforce-properties</id>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${maven-enforcer-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>jib-maven-plugin</artifactId>
        <configuration>
          <container>
            <environment>
              <sentry_release>${project.version}</sentry_release>
            </environment>
            <mainClass>com.csiro.snomio.SnomioApplication</mainClass>
            <ports>
              <port>8080</port>
            </ports>
          </container>
          <from>
            <image>eclipse-temurin:17</image>
          </from>
          <to>
            <image>${docker.registry.host}/${docker.repository}</image>
            <tags>
              <tag>${project.version}</tag>
              <tag>latest</tag>
            </tags>
          </to>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>dockerBuild</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
        <groupId>com.google.cloud.tools</groupId>
        <version>${jib.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <!--suppress UnresolvedMavenProperty -->
          <argLine>${argLine} -Dspring.profiles.active=test</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>snowstorm-java-client</artifactId>
      <groupId>au.csiro</groupId>
      <version>${snowstorm-java-client.version}</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>gson</artifactId>
      <groupId>com.google.code.gson</groupId>
      <version>${gson.version}</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-webflux</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-data-envers</artifactId>
      <groupId>org.springframework.data</groupId>
    </dependency>
    <dependency>
      <artifactId>h2</artifactId>
      <groupId>com.h2database</groupId>
      <scope>runtime</scope>
      <version>${h2.version}</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>jacoco-maven-plugin</artifactId>
      <groupId>org.jacoco</groupId>
      <version>${jacoco-maven-plugin.version}</version>
    </dependency>
    <dependency>
      <artifactId>rest-assured</artifactId>
      <groupId>io.rest-assured</groupId>
      <scope>test</scope>
      <version>${rest-assured.version}</version>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <version>${postgres.version}</version>
    </dependency>
    <dependency>
      <artifactId>flyway-core</artifactId>
      <groupId>org.flywaydb</groupId>
      <version>${flyway-version}</version>
    </dependency>
    <dependency>
        <groupId>org.jgrapht</groupId>
        <artifactId>jgrapht-core</artifactId>
        <version>${jgrapht-core.version}</version>
    </dependency>
  </dependencies>
  <description>Api for snomio</description>
  <modelVersion>4.0.0</modelVersion>
  <name>snomio api</name>
  <parent>
    <artifactId>snomio</artifactId>
    <groupId>com.csiro</groupId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>
  <properties>
    <docker.registry.host>nctsacr.azurecr.io</docker.registry.host>
    <docker.repository>snomio</docker.repository>
    <flyway-version>9.22.1</flyway-version>
    <java.version>17</java.version>
    <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
    <jib.version>3.3.2</jib.version>
    <postgres.version>42.6.0</postgres.version>
    <problem-spring-web.version>0.23.0</problem-spring-web.version>
    <rest-assured.version>5.3.1</rest-assured.version>
    <spring-security.version>6.1.2</spring-security.version>
    <fmt-maven-plugin.version>2.20</fmt-maven-plugin.version>
    <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
    <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
    <snowstorm-java-client.version>8.1.0</snowstorm-java-client.version>
    <gson.version>2.10.1</gson.version>
    <h2.version>2.2.222</h2.version>
    <jgrapht-core.version>1.5.2</jgrapht-core.version>
  </properties>
</project>